--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="logo-facebook">
+    <a href="https://www.facebook.com/gustavoguanabara">ACESSE</a>
 </body>
 </html>
