--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-github.jpg" alt="GitHub">
+    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
