--- a/facebook.html
+++ b/facebook.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="logo-facebook">
-    <a href="https://www.facebook.com/gustavoguanabara">ACESSE</a>
+    <a href="https://www.facebook.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
